--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10471,7 +10471,7 @@ header a {
 #sidebar {
   background: #4d4c4c -webkit-gradient(linear, left top, left bottom, from(#4d4c4c), to(#1a1919));
   background: #4d4c4c linear-gradient(to bottom, #4d4c4c, #1a1919);
-  color: #919090;
+  color: #c4c3c3;
 }
 
 #sidebar a {
@@ -10490,7 +10490,7 @@ header a {
 }
 
 .feature {
-  border: 4px double #919090;
+  border: 4px double #c4c3c3;
   margin-bottom: 1rem;
   padding: 0.5rem;
 }
@@ -10504,7 +10504,7 @@ header a {
 .feature h4 {
   font-family: "proxima-nova-extra-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
-  border-bottom: 3px solid #919090;
+  border-bottom: 3px solid #c4c3c3;
   text-shadow: 0 1px 0 #aaaaaa, 0 -1px 0 black;
 }
 
@@ -10526,7 +10526,7 @@ header a {
 
 #product-content {
   background: #000000;
-  color: #919090;
+  color: #c4c3c3;
   border: 2px solid #333333;
 }
 
@@ -10668,7 +10668,7 @@ header a {
 
 #fo-column #features-options {
   padding: 1em;
-  border: 2px solid #919090;
+  border: 2px solid #c4c3c3;
 }
 
 #fo-column #features-options h2 {
@@ -10677,6 +10677,16 @@ header a {
   text-transform: uppercase;
   font-size: 1.5em;
   font-weight: 900;
+}
+
+#fo-column #features-options ul {
+  font-size: 0.65rem;
+  padding-left: 1.2em;
+  line-height: 0.8rem;
+}
+
+#fo-column #features-options ul li {
+  margin-bottom: 0.5rem;
 }
 
 footer p {
