--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -456,6 +456,39 @@ header a {
 } // #fo-column
 
 
+// Text Notes --------------------------------------------------
+#text-notes {
+  padding: 2em 1em 1em 1em;
+  font-size: 0.6em;
+  font-weight: bold;
+
+  dt {
+    float: left;
+    color: $color-accent;
+    margin-right: 0.5em;
+  } // dt
+
+  /*
+  dd { // Remove default bottom margin.
+    margin-bottom: 0;
+  } // dd
+  */
+
+  /*
+  dl dl { // Indent sub-lists.
+    margin-left: 1em;
+  } // dl dl
+  */
+
+  .aside {
+    font-size: 0.8em;
+    font-style: italic;
+    font-weight: normal;
+  } // .aside
+
+} // #text-notes
+
+
 // Footer --------------------------------------------------
 footer {
 
