# Product Splash Image #
* Adds the splash image to the Product page.
* Minor cleanup.

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -425,7 +425,7 @@ header a {
 
 // Features & Options Column --------------------------------------------------
 #fo-column {
-  padding: 1em;
+  //padding: 1em;
 
   #features-options {
     padding: 1em;
