--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,24 +1,32 @@
-
 // Fonts
 @import url("https://fonts.googleapis.com/css?family=Raleway:300,400,600");
-
-// Variables
-@import "variables";
 
 // Bootstrap overrides (MUST come before Bootstrap import.)
 @import "bootstrap-overrides";
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
 
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
 
+// Libraries and helpers
+// ---------------------
+@import "helpers/helpers";
+
+// Variables
+// ---------
+@import "variables/colors";
+@import "variables/typography";
+@import "variables/layout";
+@import "variables/files";
+
+// Reset and base files
+// --------------------
+@import "base/base";
+
 // American Cabin Supply
 @import "typography";
-@import "acs-variables";
-@import "mixins";
-@import "base";
 @import "layout";
