RetinaJS in CSS
* Adds the capability for the `retina` mixin to be called in CSS.
* Along the way, also extracts vendor JS files to be separate from user-created JS files.
* Adds a background to the Product thumbnails.

--- a/resources/assets/sass/_layout.scss
+++ b/resources/assets/sass/_layout.scss
@@ -505,6 +505,7 @@ header a {
 } // .item-info__description
 
 .item-info__thumbnail {
+  @include retina("/images/product-background.jpg", 3, cover, center center no-repeat);
   border: $size-border solid color(bg-abs);
   position: relative;
   display: inline-block;
