--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -15,6 +15,7 @@
 // Libraries and helpers
 // ---------------------
 @import "helpers/helpers";
+@import "~retinajs/dist/retina";
 
 // Variables
 // ---------
